Next Game Test and clean GameEngineTest File